css/style.css
:root {
    --font-roboto: 'Roboto', sans-serif;
    --body-background: #ffffff;
    --footer-bg: #7f7b77;
    --text-color: #585350;
    --heading-color: #57524f;
    --white: #ffffff;
    --stroke: #45413e;

    --blue: #4aa8ff;
    --yellow: #ffe58a;
    --red: #b72828;

    --green-100: #82c341;

    --light: #eeeeee;
    --light-100: #e0e0e0;
    --light-200: #c6ccd2;
    --light-300: #eeeff1;
    --light-400: #c0c0c0;

    --hover-transition: all 0.25s ease;
}

html {
    box-sizing: border-box;
    scroll-behavior: smooth;
}

*,
*::after,
*::before {
    margin: 0;
    padding: 0;
    box-sizing: inherit;
}

body {
    position: relative;
    display: flex;
    flex-direction: column;
    background-color: var(--body-background);
    width: 100%;
    /* height: 100vh; */
    font-family: var(--font-roboto);
    color: var(--text-color);
    font-style: normal;
    font-weight: 400;
    font-size: 18px;
    line-height: 22px;
    overflow: hidden;
}

ul {
    font-family: inherit;
    list-style: none;
    margin: 0;
    padding: 0;
}

button {
    border: none;
    background-color: transparent;
    font: inherit;
    cursor: pointer;
}

button:focus {
    outline: none;
    box-shadow: unset;
}

a {
    text-decoration: none;
}

b {
    font-weight: 700;
}

h3 {
    font-weight: 900;
    font-size: 32px;
    line-height: 39px;
    letter-spacing: 0.025em;
    color: var(--heading-color);
}

h4 {
    font-weight: 400;
    font-size: 26px;
    line-height: 31px;
    color: var(--text-color);
}

h6 {
    font-weight: 400;
    font-size: 31px;
    line-height: 37px;
    letter-spacing: 0.06em;
    color: var(--heading-color);
}

.blue-text {
    color: var(--blue);
}

.gray-bg {
    background: #dddddd !important;
}
.pink-bg {
    background: #ffe6e6 !important;
}
.blue-bg {
    background: #cde5ff !important;
}

@media (max-width: 1999.98px) {
    body {
        font-size: 16px;
        line-height: 20px;
    }
    h3 {
        font-size: 26px;
        line-height: 32px;
    }
    h4 {
        font-size: 20px;
        line-height: 24px;
    }
    h6 {
        font-size: 26px;
        line-height: 30px;
    }
}

@media (max-width: 1399.98px) {
    h3 {
        font-size: 24px;
        line-height: 30px;
    }
    h4 {
        font-size: 18px;
        line-height: 24px;
    }
    h6 {
        font-weight: 500;
        font-size: 20px;
        line-height: 26px;
        letter-spacing: 0;
    }
}

@media (max-width: 1199.98px) {
    b {
        font-weight: 500;
    }
    h3 {
        font-size: 20px;
        line-height: 26px;
    }
    h4 {
        font-size: 16px;
        line-height: 20px;
    }
    h6 {
        font-size: 16px;
        line-height: 20px;
    }
}

@media (max-width: 767.98px) {
    body {
        font-size: 14px;
    }
    h3 {
        font-size: 18px;
    }
}

/* ============== Header Styling Start ============== */
.header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: var(--light);
    padding: 38px 40px;
    border-bottom: 2px solid var(--light-100);
    /* zoom: 75%; */
}

.header__logo {
    display: flex;
    align-items: center;
}

.header__logo-avatar {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100px;
    height: 84px;
    border: 2px solid var(--stroke);
    border-radius: 8px;
    margin-right: 20px;
    overflow: hidden;
}

/* .header__logo-avatar img {
    width: 100%;
    height: 100%;
    object-fit: cover;
} */

.header__logo-text p {
    font-weight: 300;
    font-size: 29px;
    line-height: 35px;
    letter-spacing: 0.025em;
    color: var(--heading-color);
    margin-top: 6px;
}

.header__nav {
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: flex-end;
}

.header__calendar {
    display: flex;
    align-items: center;
}

.header__calendar-btn {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100px;
    height: 80px;
    border: 2px solid var(--stroke);
    border-radius: 8px;
    padding: 10px 12px;
}

.header__calendar-wrapper {
    display: flex;
    align-items: center;
    padding: 0 10px;
}

.header__calendar-wrapper button {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100px;
    height: 80px;
}

.header__calendar-date {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 560px;
    height: 80px;
    border: 2px solid var(--heading-color);
    border-radius: 8px;
    font-size: 40px;
    line-height: 48px;
    letter-spacing: 0.05em;
    color: var(--heading-color);
    margin: 0 10px;
}

.header__nav-list {
    display: flex;
    align-items: center;
}

.header__nav-item {
    margin-right: 18px;
}

/* .header__nav-notification {
    display: flex;
    align-items: center;
} */

.header__nav-btn {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 101px;
    height: 80px;
    background-color: var(--light-200);
    border-radius: 8px;
    font-weight: 700;
    font-size: 36px;
    line-height: 43px;
    letter-spacing: 0.025em;
    color: #c2c2c2;
    transition: var(--hover-transition);
}

.header__nav-btn svg {
    transition: all 0.1s ease;
}

.header__nav-btn.active {
    background-color: #007aff;
    color: var(--white);
}

.header__nav-btn .users-stroke {
    stroke: #aaaaaa;
}

.header__nav-btn.active .users-stroke {
    stroke: #007aff;
}

.header__scores {
    display: flex;
    align-items: center;
}

.header__scores-score {
    position: relative;
}

.header__scores-score input {
    position: absolute;
    opacity: 0;
    inset: 0;
    cursor: pointer;
}

.header__scores-score span {
    color: var(--white);
    border-radius: 8px 0 0 8px;
    cursor: pointer;
}
.header__scores .header__scores-score:last-child span {
    border-radius: 0 8px 8px 0;
}

.header__scores-score input:checked ~ span {
    background-color: #007aff;
}
/* ... */

